# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  добрыйденьэтомойкомемнтраий
.github/workflows/: github-actions-demo.yml
brain_games/: check_count.py  cli.py  countering_and_cheking_answers.py  engine.py  expr_result.py  games_logic.py  random_numbers.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/logic/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
