[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LilDrugHill <smookigrow@icloud.com>"]
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
poetry = "^1.1.13"
pip = "^22.0.4"
asciinema = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"
brain-progression = "brain_games.scripts.brain_progression:brain_progression"
brain-prime = "brain_games.scripts.brain_prime:brain_prime"